avanzando en css

--- a/client/src/index.css
+++ b/client/src/index.css
@@ -5,6 +5,11 @@ body {
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  background-image: url('C:\SoyHenry carrera\PI-Food-main (1)\PI-Food-main\client\src\store\imagenes\mainFood.png');
+  background-size: cover;
+  background-repeat: no-repeat;
+  background-position: center;
+  background-attachment: fixed;
 }
 
 code {
